# protocrap

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  README.md  SPECS.md  TODO.md  bazel-bin  bazel-out  bazel-rust_protobuf  bazel-testlogs  bazelisk.sh  bootcrap.sh  build.rs  generate_descriptor.sh  test_descriptor_up_to_date.sh
.cargo/: config.toml
.github/workflows/: ci.yml
bazel/: BUILD.bazel  proto_descriptor_set.bzl
benches/: proto_bench.rs
benchmark/: BUILD.bazel  Cargo.toml  README.md  build.rs
benchmark/benches/: proto_bench.rs
codegen/: BUILD.bazel  Cargo.toml  codegen.cpp
codegen-tests/: BUILD.bazel  Cargo.toml  build.rs  test_data.json
codegen-tests/proto/: test.proto
codegen-tests/src/: lib.rs
codegen/codegen-tests/: BUILD.bazel  Cargo.toml  build.rs
codegen/codegen-tests/proto/: test.proto
codegen/codegen-tests/src/: lib.rs
codegen/src/: generator.rs  lib.rs  main.rs  names.rs  static_gen.rs  tables.rs
conformance/: BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  build.rs  conformance_all.proto  failing_tests.txt
conformance/src/: lib.rs  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_chunked.rs  decode_raw.rs
no-std-test/: Cargo.toml
no-std-test/src/: lib.rs
proto/: BUILD.bazel  example.proto
protocrap/: Cargo.toml  build.rs
protocrap-codegen/: Cargo.toml  protocrap.bzl
protocrap-codegen/src/: generator.rs  lib.rs  main.rs  names.rs  static_gen.rs  tables.rs
protocrap/benchmark/: Cargo.toml
protocrap/benchmark/benches/: proto_bench.rs
protocrap/codegen/: Cargo.toml
protocrap/codegen-tests/: Cargo.toml
protocrap/codegen-tests/src/: lib.rs
protocrap/codegen/src/: generator.rs  lib.rs  main.rs
protocrap/src/: base.rs  containers.rs  decoding.rs  descriptor.pc.rs  encoding.rs  lib.rs  reflection.rs  serde.rs  tables.rs  wire.rs
protocrap_stable/: Cargo.toml  bootcrap.sh
protocrap_stable/codegen/: Cargo.toml
protocrap_stable/codegen/src/: generator.rs  lib.rs  main.rs  static_gen_refl.rs
protocrap_stable/protocrap/: Cargo.toml  bootcrap.sh
protocrap_stable/protocrap/codegen/: Cargo.toml
protocrap_stable/protocrap/codegen/src/: generator.rs  static_gen_refl.rs
protocrap_stable/protocrap/src/: serde.rs
protocrap_stable/src/: descriptor2.pc.rs  reflection.rs
src/: arena.rs  base.rs  containers.rs  decoding.rs  descriptor.pc.rs  descriptor.rs  descriptor_pool.rs  encoding.rs  generated_code_only.rs  lib.rs  main.rs  proto_json.rs  reflection.rs  repeated_field.rs  serde.rs  tables.rs  test.rs  test_utils.rs  utils.rs  wire.rs
src/codegen/: comments.rs  generator.rs  mod.rs  names.rs  static_gen.rs  tables.rs
test-protos/: BUILD.bazel
test-protos/proto/: test.proto
test-protos/src/: lib.rs
