[workspace]
members = [".", "codegen/codegen-tests", "benchmark", "codegen", "conformance", "fuzz"]
exclude = ["fuzz", ".rustup"]
resolver = "2"

[package]
name = "protocrap"
version = "0.1.17"
edition = "2024"
rust-version = "1.85"
description = "A small, efficient, and flexible protobuf implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/priv-gerben/protocrap"
documentation = "https://docs.rs/protocrap"
keywords = ["protobuf", "serialization", "encoding", "no-std", "arena"]
categories = ["encoding", "parser-implementations", "no-std"]
readme = "README.md"

[dependencies]
allocator-api2 = "0.2"
anyhow = "1.0.100"
base64 = "0.22.1"
futures = "0.3.31"
serde = { version = "1.0.228", optional = true}
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

[features]
default = ["std", "serde_support"]
serde_support = ["serde"]
std = []
nightly = []

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

