[workspace]
members = [".", "codegen-tests", "benchmark", "conformance", "fuzz"]
exclude = ["fuzz", ".rustup"]
resolver = "2"

[package]
name = "protocrap"
version = "0.1.19"
edition = "2024"
rust-version = "1.91"
description = "A small, efficient, and flexible protobuf implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gerben-stavenga/protocrap"
documentation = "https://docs.rs/protocrap"
keywords = ["protobuf", "serialization", "encoding", "no-std", "arena"]
categories = ["encoding", "parser-implementations", "no-std"]
readme = "README.md"

[dependencies]
allocator-api2 = "0.2"
base64 = "0.22.1"
futures = "0.3.31"
serde = { version = "1.0.228", optional = true }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

# Codegen dependencies (optional)
anyhow = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
syn = { version = "2.0", features = ["full", "parsing"], optional = true }
proc-macro2 = { version = "1.0", optional = true }
prettyplease = { version = "0.2", optional = true }

# Bootstrap: use published protocrap for codegen
# bootcrap = { package = "protocrap", version = "0.1", optional = true }

[features]
default = ["std", "serde_support"]
serde_support = ["serde"]
std = []
nightly = []
codegen = ["std", "anyhow", "quote", "syn", "proc-macro2", "prettyplease"]
# bootstrap = ["codegen", "bootcrap"]

[[bin]]
name = "protocrap"
required-features = ["codegen"]

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

