load("@rules_rust//rust:defs.bzl", "rust_library_group")
load("@rules_rust_prost//:defs.bzl", "rust_prost_toolchain")

# Prost runtime using our crate.spec prost
rust_library_group(
    name = "prost_runtime",
    deps = ["@crates//:prost"],
)

rust_prost_toolchain(
    name = "prost_toolchain_impl",
    prost_plugin = "@crates//:protoc-gen-prost__protoc-gen-prost",
    prost_runtime = ":prost_runtime",
    prost_types = "@crates//:prost-types",
    tonic_plugin_flag = "",
)

toolchain(
    name = "prost_toolchain",
    toolchain = ":prost_toolchain_impl",
    toolchain_type = "@rules_rust_prost//:toolchain_type",
)
