load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

# Benchmark library with prost comparison
rust_library(
    name = "protocrap_benchmarks",
    srcs = [
        "src/lib.rs",
        "benches/proto_bench.rs",
    ],
    crate_features = ["prost-compare"],
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "//:protocrap",
        "//test-protos:test_protos",
        "//test-protos:test_proto_prost",
        "@crates//:allocator-api2",
        "@crates//:criterion",
        "@crates//:prost",
    ],
)

# Test that benchmark code compiles
rust_test(
    name = "protocrap_benchmarks_test",
    crate = ":protocrap_benchmarks",
)

# Runnable benchmark binary with prost comparison
rust_binary(
    name = "bench",
    srcs = ["benches/proto_bench.rs"],
    crate_features = ["prost-compare"],
    edition = "2024",
    deps = [
        "//:protocrap",
        "//test-protos:test_protos",
        "//test-protos:test_proto_prost",
        "@crates//:allocator-api2",
        "@crates//:criterion",
        "@crates//:prost",
    ],
)
