[package]
name = "protocrap-benchmarks"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["prost-compare"]
prost-compare = ["dep:prost", "dep:prost-build"]

[dependencies]
allocator-api2 = "0.2"
protocrap = { path = ".." }
codegen-tests = { path = "../codegen-tests" }
prost = { version = "0.14.1", optional = true }

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
prost-build = { version = "0.14.1", optional = true }

[[bench]]
name = "proto_bench"
harness = false
