[package]
name = "protocrap-codegen"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Code generator for protocrap protobuf library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/priv-gerben/protocrap"
keywords = ["protobuf", "codegen"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.100"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
proc-macro2 = "1.0"
prettyplease = "0.2"

protocrap_stable = { package = "protocrap", path = "../../protocrap_stable", optional = true }
protocrap = { path = "../../protocrap", optional = true }

[features]
default = ["protocrap"]
bootcrap = ["protocrap_stable"]