# Conformance Test Runner

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
load("//bazel:proto_descriptor_set.bzl", "proto_descriptor_set")

exports_files(["Cargo.toml"])

alias(
    name = "conformance_test_runner",
    actual = "@protobuf//conformance:conformance_test_runner",
    visibility = ["//visibility:public"],
)

# Merged descriptor set using protos from @protobuf
proto_descriptor_set(
    name = "conformance_descriptor_set",
    deps = [
        "@protobuf//conformance:conformance_proto",
        "@protobuf//conformance/test_protos:test_messages_proto2_proto",
        "@protobuf//conformance/test_protos:test_messages_proto3_proto",
    ],
    visibility = ["//visibility:public"],
)

# Generate Rust code from descriptor set
genrule(
    name = "conformance_generated",
    srcs = [":conformance_descriptor_set"],
    outs = ["src/conformance_all.pc.rs"],
    cmd = "$(execpath //:protocrap-codegen) $(location :conformance_descriptor_set) $@",
    tools = ["//:protocrap-codegen"],
)

# Conformance library with generated code
rust_library(
    name = "conformance_lib",
    srcs = [
        "src/lib.rs",
        ":conformance_generated",
    ],
    compile_data = [":conformance_descriptor_set"],
    crate_name = "protocrap_conformance",
    edition = "2024",
    rustc_env = {
        "CONFORMANCE_DESCRIPTOR_SET": "$(execpath :conformance_descriptor_set)",
    },
    rustc_flags = ["--cfg=bazel"],
    visibility = ["//visibility:public"],
    deps = [
        "//:protocrap",
        "@crates//:allocator-api2",
        "@crates//:anyhow",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

# Conformance binary
rust_binary(
    name = "conformance-protocrap",
    srcs = ["src/main.rs"],
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        ":conformance_lib",
        "//:protocrap",
        "@crates//:allocator-api2",
        "@crates//:anyhow",
        "@crates//:byteorder",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

# Run conformance tests (static mode)
sh_test(
    name = "conformance_test",
    srcs = ["@protobuf//conformance:conformance_test_runner"],
    args = [
        "--enforce_recommended",
        "--failure_list",
        "$(location failing_tests.txt)",
        "$(location :conformance-protocrap)",
    ],
    data = [
        "failing_tests.txt",
        ":conformance-protocrap",
    ],
)

# Run conformance tests (dynamic mode - uses reflection descriptor pool)
sh_test(
    name = "conformance_test_dynamic",
    srcs = ["@protobuf//conformance:conformance_test_runner"],
    args = [
        "--enforce_recommended",
        "--failure_list",
        "$(location failing_tests.txt)",
        "$(location :conformance-protocrap)",
        "--",
        "--dynamic",
    ],
    data = [
        "failing_tests.txt",
        ":conformance-protocrap",
    ],
)
