# Conformance Test Runner

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

alias(
    name = "conformance_test_runner",
    actual = "@protobuf//conformance:conformance_test_runner",
    visibility = ["//visibility:public"],
)

# Conformance library - uses test_protos for all generated code
rust_library(
    name = "conformance_lib",
    srcs = ["src/lib.rs"],
    crate_name = "protocrap_conformance",
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "//:protocrap",
        "//test-protos:test_protos",
        "@crates//:allocator-api2",
        "@crates//:anyhow",
    ],
)

# Conformance binary
rust_binary(
    name = "conformance-protocrap",
    srcs = ["src/main.rs"],
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        ":conformance_lib",
        "//:protocrap",
        "//test-protos:test_protos",
        "@crates//:allocator-api2",
        "@crates//:anyhow",
        "@crates//:byteorder",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

# Run conformance tests (static mode)
sh_test(
    name = "conformance_test",
    srcs = ["@protobuf//conformance:conformance_test_runner"],
    args = [
        "--enforce_recommended",
        "--failure_list",
        "$(location failing_tests.txt)",
        "$(location :conformance-protocrap)",
    ],
    data = [
        "failing_tests.txt",
        ":conformance-protocrap",
    ],
)

# Run conformance tests (dynamic mode - uses reflection descriptor pool)
sh_test(
    name = "conformance_test_dynamic",
    srcs = ["@protobuf//conformance:conformance_test_runner"],
    args = [
        "--enforce_recommended",
        "--failure_list",
        "$(location failing_tests.txt)",
        "$(location :conformance-protocrap)",
        "--",
        "--dynamic",
    ],
    data = [
        "failing_tests.txt",
        ":conformance-protocrap",
    ],
)
